Align footer elements correctly

--- a/components/Footer.less
+++ b/components/Footer.less
@@ -2,6 +2,15 @@
 	border-top: solid 20px @background-color-base;
 	padding: 20px 0;
 
+	> div,
+	> ul {
+		margin: 1em;
+
+		ul {
+			margin: 0;
+		}
+	}
+
 	li {
 		display: inline-block;
 		margin-right: 20px;
